			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04h: *********************************

BUG: (3/21/06, GVG) duplication {lay} versioning detecting wrong view (Bug #895)
FIX: View was not checked.

BUG: (3/21/06, DN) Assertion in CellBackup on incorrect definedExports(seen in FillGenerator) (Bug #891).
FIX: In CellBackup.with correctly update definedExports set.

BUG: (3/20/06, GVG) CheckAndRepair on arcs only reporting the error in repair mode.
FIX: Create the error logger also in check mode.

IMP/MAN: (3/19/06, GVG) Ability to leave unconnected pins (Bug 488)
New preferences added in Routing tool.

Bugzilla #s to close: 318 (works now),

IMP: (3/19/06, GVG) Able to close the last library (Bug #812)

BUG: (3/19/06, DN) System.out.println() is blocked while append in MessagesWindow occurs.
     New thread is invoked every 200 ms.
FIX: In MessagesWindow remove "dump" out of synchronized block.
     Use one Ticker thread for all the time.

BUG: (3/19/06, DN) Some export names are not repaired.
FIX: In Cell.checkAndRepair iterate over copy of exports array.

IMP: (3/18/06, GVG) Select Object dialog was useless if you navigate down/up the hierarchy (Bug #862)
 
BUG: (3/18/06, GVG) "Project file not fund" message in Project Management (Bug #849).
FIX: RetrieveLibraryFromRepositoryJob implements terminateOK() instead of terminateIt.

BUG: (3/17/06, GVG) Arc routing complaing about "domain violation while figuring angle in radians" (Bug #888).
It happens when you are rounting two nodes in top of each other (tail and head points are identical).
FIX: Detecting the case.

IMP: (3/17/06, GVG) Adding tests plugin including TestMenu. Using reflection to avoid dependency on new plugin
LayerCoverageTool tests are there for now. DRC and ERC should come next.

BUG: (3/16/06, GVG) Coverage Implant not serializable.
FIX: Fixed by change LayerCoverageTool job
